tests/fail/greater_equals_than_non_associative.tig
if 0 >= 1 >= 2 then ()
